--- a/src/main/resources/static/templates/modalWindow.html
+++ b/src/main/resources/static/templates/modalWindow.html
@@ -1,12 +1,11 @@
 <div class="popup-fade" >
     <div class="popup">
         <button class="popup-close" ng-click="closeInfo()">Закрыть</button>
-        <span><br>
-            Дисциплина: {{lessonToView.subject}} <br>
-                    Тип: {{lessonToView.lessonType}} <br>
-                    Преподаватель: {{lessonToView.professor}} <br>
-                    Аудитория: {{lessonToView.classroom}} <br>
-                    Статус: {{lessonToView.status}}
-        </span>
+        <span>      Дисциплина: {{lessonToView.subject}} <br> </span>
+        <span>           Тип: {{lessonToView.lessonType}} <br> </span>
+        <span ng-show="groupShow">           Группа: {{lessonToView.group}} <br> </span>
+        <span ng-show="profShow">           Преподаватель: {{lessonToView.professor}} <br> </span>
+        <span>          Аудитория: {{lessonToView.classroom}} <br> </span>
+        <span ng-show="statusShow">           Статус: {{(lessonToView.status ? "проводится" : "отменена")}} <br></span>
     </div>
 </div>
