--- a/src/main/resources/static/templates/addLessonForm.html
+++ b/src/main/resources/static/templates/addLessonForm.html
@@ -77,5 +77,5 @@
             </td>
         </tr>
     </table>
-    <button ng-click="showLesson()">showSellected</button>
+    <button ng-click="showLesson()">Проверить позиции</button>
 </div>
