--- a/src/main/resources/static/templates/modalWindow.html
+++ b/src/main/resources/static/templates/modalWindow.html
@@ -1,8 +1,8 @@
 <div class="popup-fade" >
     <div class="popup">
         <button class="popup-close" ng-click="closeInfo()">Закрыть</button>
-        <span>      Дисциплина: {{lessonToView.subject}} <br> </span>
-        <span>           Тип: {{lessonToView.lessonType}} <br> </span>
+        <span>      <br>Дисциплина: {{lessonToView.subject}} <br> </span>
+        <span> Тип: {{lessonToView.lessonType}} <br> </span>
         <span ng-show="groupShow">           Группа: {{lessonToView.group}} <br> </span>
         <span ng-show="profShow">           Преподаватель: {{lessonToView.professor}} <br> </span>
         <span>          Аудитория: {{lessonToView.classroom}} <br> </span>
