--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -23,11 +23,15 @@ body{
 /*    !*    background: #8ED9B6;*!*/
 /*}*/
 
-.header {
+.loginHeader {
     font-family: "Arial", Georgia, Serif;
     font-weight: 600;
-    font-size: 35px;
-    margin: 10px auto;
+    font-size: 45px;
+    display: inline-block;
+    background-color: #adadad;
+border-radius: 5px;
+    padding: 4px;
+    margin: 15px auto;
     text-align: center;
     text-shadow: 1px 2px 3px rgba(5,46,68,0.25);
 }
@@ -48,9 +52,8 @@ body{
     width: 550px;
     /* Ширина */
     text-align: left;
-    padding: 5px;
-    margin-top: 30px;
-    padding-top: 30px;
+    /*margin-top: 30px;*/
+    padding: 10px 5px 5px;
     /* Поля */
     margin: 2px auto;
     transition: 0.6s;
