--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -10,7 +10,8 @@ body {
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    max-width: 90%;
+    min-width: 1400px;
     background: #8ED9B6;
     height: calc(100vh - 100px);
     /*max-height: 95%;*/
@@ -39,7 +40,8 @@ body {
 
 .universityNameHeader {
     color: white;
-    width: 80%;
+    max-width: 78%;
+    min-width: 50%;
     /*max-width: 750px;*/
     height: 50px;
     display: inline-block;
@@ -58,9 +60,8 @@ body {
     -webkit-box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 2px 5px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 2px 5px rgba(0, 0, 0, 0.08);
     box-shadow: inset 0 3px 0 rgba(255, 255, 255, 0.2), 0 2px 5px rgba(0, 0, 0, 0.08);
-    /*color: #fff;*/
     display: table-cell;
-    width: 200px;
+    width: auto;
     height: 40px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -71,8 +72,10 @@ body {
     -moz-transition: background-color 0.1s linear;
     -o-transition: background-color 0.1s linear;
     transition: background-color 0.2s linear;
-    background-color: rgb( 43, 153, 91);
-    border: 1px solid rgb( 33, 126, 74);
+    /*background-color: rgb( 43, 153, 91);*/
+    /*background-color: #6d6e71;*/
+    /*border: 1px solid rgb( 33, 126, 74);*/
+    /*border: #6d6e71;*/
 }
 
 .button:hover {
@@ -80,13 +83,14 @@ body {
 }
 
 .page{
+    /*background-color: #6d6e71;*/
     font-size: 15pt;
     width: 95%;
-    margin: 0 auto 20px;
+    margin: 20px auto 20px;
     display: none;
     /*min-height: 450px;*/
     height: 100%;
-    background-color: #8ED9B6;
+    /*background-color: #bb8d54;*/
     border-radius: 15px;
     padding: 10px 10px 20px 10px;
 }
