--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -3,7 +3,9 @@
     margin: 0px;
     position: relative;
     background: #339966;
-    width: 100%;
+    /*width: 100%;*/
+    max-width: 100%;
+    min-width: 1400px;
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, .1), inset -1px 0 0 rgba(255, 255, 255, .1), inset 150px 0 150px -150px rgba(255, 255, 255, .12), inset -150px 0 150px -150px rgba(255, 255, 255, .12);
 }
 
@@ -13,7 +15,9 @@
     position: absolute;
     /*z-index: 2;*/
     left: 10px;
-    width: 100%;
+    /*width: 100%;*/
+    max-width: 100%;
+    min-width: 1400px;
     height: 3px;
 }
 
@@ -32,12 +36,14 @@
 }
 
 .menu-main {
-    width: 100%;
+    /*width: 100%;*/
+    max-width: 100%;
+    min-width: 1400px;
     list-style: none;
     padding: 0;
     margin: 10px;
     text-align: center;
-    font-size: 15pt;
+    font-size: 23pt;
 }
 
 .menu-main:before,
