--- a/src/main/resources/static/css/searchStyle.css
+++ b/src/main/resources/static/css/searchStyle.css
@@ -1,3 +1,8 @@
+.searchBlock{
+    background-color: #adadad;
+    border-radius: 20px;
+}
+
 .filters{
     margin-top: 10px;
     margin-bottom: 10px;
