--- a/src/main/resources/static/css/timetable.css
+++ b/src/main/resources/static/css/timetable.css
@@ -1,7 +1,8 @@
 .timetableStyle{
-    background-color: darkseagreen;
+    /*background-color: darkseagreen;*/
+    /*background-color: #6d6e71;*/
     border-radius: 15px;
-    min-height: inherit;
+    min-height: 100%;
     padding: 10px;
     margin: 20px;
 }
@@ -33,9 +34,11 @@
     border: 1px solid #fff; 
     background-color: darkkhaki;
     border-radius: 10px;
-    min-height: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*8);
-    min-width: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*7.5);
+    /*min-height: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*8);*/
+    min-height: 180px;
+    /*min-width: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*7.5);*/
     /*max-width: auto;*/
+    width: 180px;
     vertical-align: top;
 }
 
@@ -62,7 +65,8 @@
     max-height: 60px;
     /*font-size: 13pt;*/
     /*font-size: calc( (100vw - Vmin)/(Vmax - Vmin) * (Fmax - Fmin) + Fmin);*/
-    font-size: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*0.8);
+    max-font-size: calc( ((100vw - 480px)/(1280 - 480) * (24 - 16) + 16px)*0.8);
+    min-font-size: 20px;
     list-style-type: none;
     padding: 0 2px;
     white-space: nowrap; /* Запрещаем перенос строк */
