--- a/src/main/resources/static/css/universitySettings.css
+++ b/src/main/resources/static/css/universitySettings.css
@@ -4,12 +4,13 @@
     border-color: black;
     top: 0;
     text-align: center;
-    height: 460px;
+    height: 420px;
     width: 760px;
     border-radius: 25px;
     bottom: 0;
     left: 0;
     margin: 20px auto 0;
+    padding-top: 20px;
     /*box-shadow: inset 0px 0px 5px rgba(255, 255, 255, 0.2), 5px 5px 5px rgba(0, 0, 0, 0.1);*/
 }
 
