--- a/src/main/resources/static/templates/searchPage.html
+++ b/src/main/resources/static/templates/searchPage.html
@@ -1,7 +1,8 @@
-<div><input id="searchDead" type="text" class="search-input" style="width: 400px" spellcheck="false"></div>
-<div class="filters">
-    <button id="prof" ng-click="filterProf()" id="prof" class="filter-button">Преподаватель</button>
-    <button ng-click="filterGroup()" id="group" class="filter-button">Группа</button>
-    <span>/</span>
-    <button ng-click="filterRoom()" id="room" class="filter-button">Аудитория</button>
+<div class="searchBlock"><div ><input id="searchDead" type="text" class="search-input" style="width: 400px" spellcheck="false"></div>
+    <div class="filters">
+        <button id="prof" ng-click="filterProf()" id="prof" class="filter-button">Преподаватель</button>
+        <button ng-click="filterGroup()" id="group" class="filter-button">Группа</button>
+        <span>/</span>
+        <button ng-click="filterRoom()" id="room" class="filter-button">Аудитория</button>
+    </div>
 </div>
