--- a/src/main/resources/static/templates/timetable.html
+++ b/src/main/resources/static/templates/timetable.html
@@ -1,4 +1,4 @@
-<div class="timetableStyle">
+<div class="timetableStyle" ng-show="timetableShow">
 <!--    <h2>Расписание</h2>-->
     <div class="week-number-cell" style="padding-top: 10px">
         <button ng-click="dec_week()"><</button>
