--- a/src/main/resources/static/templates/universitySettingsBlock.html
+++ b/src/main/resources/static/templates/universitySettingsBlock.html
@@ -171,7 +171,7 @@
         </script>
     </table>
     <div class="divLine">
-        <button ng-show="returnShow" ng-click="return()" class="button" style="font-size: 22px">Назад</button>
-        <button ng-click="button_click()" class="button" style="font-size: 22px">{{buttonLabel}}</button>
+        <button ng-show="returnShow" ng-click="return()" class="buttonClass" style="font-size: 22px">Назад</button>
+        <button ng-click="button_click()" class="buttonClass" style="font-size: 22px">{{buttonLabel}}</button>
     </div>
 </div>
