--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -10,10 +10,10 @@ body {
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 90%;
-    min-width: 1400px;
+    max-width: 1400px;
+    min-width: 1000px;
     background: #8ED9B6;
-    height: calc(100vh - 100px);
+    height: 900px;
     /*max-height: 95%;*/
     border-radius: 10px;
     box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.2), 5px 5px 5px rgba(0, 0, 0, 0.1);
@@ -120,8 +120,7 @@ body {
     position: fixed;
     top: 35%;
     left: 30%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     text-align: center;
     vertical-align: center;
     padding: 20px;
