--- a/src/main/resources/static/templates/groupBox.html
+++ b/src/main/resources/static/templates/groupBox.html
@@ -1,5 +1,6 @@
 <ul>
     <li ng-repeat="group in groups2 track by $index" style=" display: inline; border: 1px solid #000; margin-right: 5px">
-        <span ng-click="delete(group.id)">{{group.label}}</span>
+        <span ng-if="group.number" ng-click="delete(group.id)">{{group.label}}</span>
+        <span ng-if="!group.number" style="color: red" ng-click="delete(group.id)">{{group.label}}</span>
     </li>
 </ul>
