--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,10 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="../icon/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Time For Study</title>
+
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/loginStyle.css" />
     <link rel="stylesheet" href="css/mainStyle.css" />
@@ -13,12 +14,12 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.js"></script>
-    <script src="lib/jquery/jquery.js"></script>
-    <script src="lib/jquery/jquery.maskedinput.min.js"></script>
+<!--    <script src="lib/jquery/jquery.js"></script>-->
+<!--    <script src="lib/jquery/jquery.maskedinput.min.js"></script>-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/sunny/jquery-ui.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 
     <script src="js/login.js"></script>
