TFS-220 making userSettings.html in process

--- a/src/main/resources/static/templates/userSettings.html
+++ b/src/main/resources/static/templates/userSettings.html
@@ -32,7 +32,7 @@
             <span>Ваши группы:</span>
         </td>
         <td>
-            <input type="text" id="groupsset" spellcheck="false" placeholder="выберите новые группы" class="register-input" style="width: 160px; height: 20px; font-size: 10pt"/>
+            <input type="text" id="groupsset" spellcheck="false" placeholder="выберите новые группы" style="width: 160px; height: 20px; font-size: 10pt"/>
             <group-box></group-box>
         </td>
     </tr>
