TFS-220 making userSettings.html in process

--- a/src/main/resources/static/css/universitySettings.css
+++ b/src/main/resources/static/css/universitySettings.css
@@ -58,6 +58,14 @@
     /*padding: 7px 0 4px 10px;*/
 }
 
+.register-label2 {
+    font-family: "Arial", Georgia, Serif;
+    font-weight: 550;
+    width: 30px;
+    font-size: 21px;
+    /*padding: 7px 0 4px 10px;*/
+}
+
 .workdays {
     width: 200px;
     height: 200px;
