TFS-221 userSettings.html done

--- a/src/main/resources/static/templates/userSettings.html
+++ b/src/main/resources/static/templates/userSettings.html
@@ -5,7 +5,7 @@
                 <span class="register-label2">ФИО:</span>
             </td>
             <td colspan="2" style="text-align: left">
-                <input type="text" id="nameInput" class="register-input" style="width: 310px">
+                <input type="text" id="nameInput" spellcheck="false" class="register-input" style="width: 310px">
             </td>
         </tr>
         <tr >
@@ -28,7 +28,7 @@
         </tr>
     </table>
     <span ng-show="user.role >= 3" class="register-label2" style="padding-top: 20px">Ваши группы:</span>
-    <input ng-if="user.role >= 3" type="text" id="groupsset" spellcheck="false" placeholder="выберите новые группы" class="register-input" style="width: 210px; margin-top: 10px; text-align: center; height: 20px; font-size: 10pt"/>
+
     <br> <group-box ng-show="user.role >= 3"></group-box>
     <table style="margin-top: 15px">
         <tr>
@@ -36,5 +36,5 @@
             </td>
         </tr>
     </table>
-
+    <input ng-if="user.role >= 3" type="text" id="groupsset" spellcheck="false" placeholder="выберите новые группы" class="register-input" style="width: 210px; margin-top: 10px; text-align: center; height: 20px; font-size: 10pt"/>
 </div>
